Revision history for Perl extension Coro.

TODO: should explore PerlIO::coroaio (perl leaks like hell).
TODO: unready_all
TODO: myhttpd header parsing
TODO: channel->maxsize(newsize)?
TODO: http://www.microsoft.com/msj/archive/s2ce.aspx

5.25  Thu Nov 11 01:08:39 CET 2010
	- try a different approach on netbsd - netbsd 5 finally has marginally
          working pthreads, but still broken ucontext/sigaltstack.
        - openbsd 4.8 finally got their act together, Coro works out of the box
          with asm, setjmp and pthreads (no change, just informational).

5.24  Sat Oct 23 11:27:12 CEST 2010
	- port to the EV 4.0 API.
	- work around bugs in mingw32, making strawberry perl work
          out of the box.
	- correctly modify Coro::AIO function prototypes
          so that they reflect the "no optional parameters" rule.
	- "ported" libcoro to C++.

5.23  Mon May 17 18:50:42 CEST 2010
	- be more resistant to ordering changes when initialising
          Coro::AnyEvent, Coro::EV and Coro::Event (reported by Matthias
          Waldorf).
	- document that perl 5.12 deliberately removed support for cloning.

5.22  Wed Apr 14 03:55:35 CEST 2010
	- correctly return udnef on errors in Coro::Handle::read/write
          (testcase by Marc Mims).
	- convert Coro::Util into a "perl compatibility wrapper" - the functions
          are less useful now, but are drop-in replacements for existing
          functions, listing better alternatives in the documentation. This also
          fixes a bug in Coro::LWP which naively substituted Socket::inet_aton
          with Coro::Util::inet_aton.
        - do not override $Coro::idle unconditionally in Coro.pm, as other
          modules could have provided their own idle coro already
          (for exmaple, Coro::AnyEvent).
	- fix Coro::Util::gethost* functions.
        - Coro::Timer corretcly exports it's symbols (reported by Hideki Yamamura).

5.21  Wed Dec 16 07:19:51 CET 2009