@@ -4,7 +4,7 @@ Coro::Signal - thread signals (binary semaphores)
 
 =head1 SYNOPSIS
 
- use Coro::Signal;
+ use Coro;
 
  $sig = new Coro::Signal;
 
@@ -24,6 +24,9 @@ waking up all waiters.
 It is recommended not to mix C<send> and C<broadcast> calls on the same
 C<Coro::Signal> - it should work as documented, but it can easily confuse
 you :->
+
+You don't have to load C<Coro::Signal> manually, it will be loaded 
+automatically when you C<use Coro> and call the C<new> constructor. 
 
 =over 4
 
